simulazione/fritzbox/iptables.rules
# Generated by iptables-save v1.8.9 (nf_tables) on Fri Nov 29 05:37:09 2024
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [137:26600]
:OUTPUT ACCEPT [1:88]
-A FORWARD -s 192.168.2.0/24 -d 192.168.179.0/24 -j REJECT -m comment --comment "block traffic from LAN C to LAN S"
-A FORWARD -s 192.168.0.110/32 -d 192.168.179.101/32 -p tcp -m tcp --dport 22 -m comment --comment windows -j ACCEPT
-A FORWARD -s 192.168.178.11/32 -d 192.168.179.101/32 -p tcp -m tcp --dport 22 -m comment --comment thinkpad -j ACCEPT
-A FORWARD -d 192.168.179.101/32 -p tcp -m tcp --dport 22 -m comment --comment "block traffic on 22 port of other hostes" -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Fri Nov 29 05:37:09 2024
# Generated by iptables-save v1.8.9 (nf_tables) on Fri Nov 29 05:37:09 2024
*nat
:PREROUTING ACCEPT [24:1576]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [8:576]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
-A OUTPUT -d 127.0.0.11/32 -j DOCKER_OUTPUT
-A POSTROUTING -d 127.0.0.11/32 -j DOCKER_POSTROUTING
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 127.0.0.11:37649
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p udp -m udp --dport 53 -j DNAT --to-destination 127.0.0.11:45424
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 37649 -j SNAT --to-source :53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 45424 -j SNAT --to-source :53
COMMIT
# Completed on Fri Nov 29 05:37:09 2024
